# computer-vision-project

./: README.md  project.ipynb  pyproject.toml
